# lmrun

./: .env  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
ci/: Pulumi.yaml  README.md  __main__.py
cloud_init/: README.md
cloud_init/aws/: __main__.py
cluster_mesh/: README.md  __main__.py
cluster_mesh/aws/network/: firewall.py  vpc.py
cluster_mesh/sky/: config.yaml
init/: README.md
init/aws/: Pulumi.yaml  __main__.py  activation.py
mesh/: Pulumi.yaml  README.md  __main__.py  constants.py
mesh/aws/iam/: external_user.py  profile.py  profiles.py  roles.py
mesh/aws/iam/policy/: default.py  main.py
mesh/aws/network/: cidr_blocks.py  firewall.py  peering.py  vpc.py
mesh/aws/region/: availability.py  selection.py  zones.py
mesh/sky/: config.yaml
service/: README.md  main-phoenix.yaml  main-webui.yaml  main.yaml  mlflow.yaml  mlops-client.yaml  phoenix-webui.yaml
service/setup/: main.py
setup/: k3s-agent.py  k3s-server.py  k3s_agent.py  k3s_agent_command.py  k3s_agent_manifest.py  k3s_agent_util.py  k3s_command.py  k3s_host_service.py  k3s_server.py  r2-sync.sh  rclone-config-no-root.sh  rclone-install.sh  test_k3s_host_service.py  vllm-conda-install.sh
workspace/: README.md  hf-to-private.yaml  hf-to-r2.yaml  jupyter.yaml  model-download.yaml  vllm-7B.yaml  vllm.yaml
workspace/benchmark/: README.md  benchmark-client.yaml  livebench-client.yaml  model-server.yaml  model.yaml  monolithic-job.yaml  run-qwen-coder.sh  run-sky-t1.sh
workspace/examples/: README.md  fluidstack-mistral-small3.yaml  phi-4.yaml
workspace/setup/rclone/: config.sh  install.sh
workspace/the-mesh/: README.md  external-server.yaml  launch-32B.sh  livebench-client.yaml  model-server.yaml  monolithic-job.yaml  vllm-server.yaml
workspace_compute/: README.md
